fixed spacing on page one and two

--- a/main.css
+++ b/main.css
@@ -27,9 +27,9 @@ body {
 }
 
 .page-1 .logo {
-  margin-top: 100px;
+  margin-top: 80px;
   margin-left: 50px;
-  margin-bottom: 100px;
+  margin-bottom: 80px;
   height: 70px;
   width: auto;
 }
@@ -48,8 +48,8 @@ body {
 }
 
 .page-2 h1 {
-  margin-left: 100px;
-  margin-top: 250px;
+  margin-left: 50px;
+  margin-top: 150px;
 }
 
 .table-content {
@@ -64,7 +64,7 @@ body {
 
 .table-content--row {
   width: 100%;
-  height: 90px;
+  height: 75px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -89,7 +89,7 @@ body {
 
 .table-content--row__divider {
   width: 100px;
-  height: 90px;
+  height: 75px;
   display: flex;
   justify-content: center;
 }
@@ -127,9 +127,9 @@ body {
 .v2_47 {
   width: 382px;
   color: rgba(0, 0, 0, 1);
-  margin-top: 500px;
+  margin-top: 300px;
   margin-left: 150px;
-  font-weight: SemiBold;
+  font-weight: 600;
   font-size: 16px;
   opacity: 1;
   text-align: left;
